--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Shoping App</title>
-    <link rel="stylesheet" type="text/css" href="index.css" />
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" type="text/css" href="index.css" />
+
+  <title>Shoping App</title>
+</head>
   <body>
     <header id="home">
       <nav>
